Option `--add-exports` no longer needed